crash when adding non-mesh object #66374

Closed
opened 2019-07-03 13:46:06 +02:00 by Piotr Arłukowicz · 7 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-LinuxMint-19.1-tessa 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.67

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-03 09:54, hash: f990c23bcf
Worked: run as normal, reset to factory settings do not help either

Short description of error
Right after adding text object to the scene, sudden crash. Repeated several times, system up-to date, after restart.

Exact steps for others to reproduce the error

  1. Remove the cube.
  2. Shift+A, add Text
  3. Crash.

I've included log generated by running blender as:
./blender --factory-startup --debug-all >& crash.log
and the file created by blender in /tmp/blender.crash.txt.
report.zip

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-LinuxMint-19.1-tessa 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.67 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-03 09:54, hash: `f990c23bcf` Worked: run as normal, reset to factory settings do not help either **Short description of error** Right after adding text object to the scene, sudden crash. Repeated several times, system up-to date, after restart. **Exact steps for others to reproduce the error** 1. Remove the cube. 2. Shift+A, add Text 3. Crash. I've included log generated by running blender as: ./blender --factory-startup --debug-all >& crash.log and the file created by blender in /tmp/blender.crash.txt. [report.zip](https://archive.blender.org/developer/F7563818/report.zip)
Author
Member

Added subscriber: @piotao

Added subscriber: @piotao

#66379 was marked as duplicate of this issue

#66379 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-07-03 13:58:16 +02:00
Member

Confirmed, looks like this came with f990c23bcf.

@Sergey to the rescue!

Confirmed, looks like this came with f990c23bcf. @Sergey to the rescue!
Philipp Oeser changed title from crash when adding text object to crash when adding non-mesh object 2019-07-03 13:59:38 +02:00

This issue was referenced by bad5c379c6

This issue was referenced by bad5c379c6ceee0da726e0e262c403d7ade2040a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @solartistic

Added subscriber: @solartistic
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66374
No description provided.