Fix T66374: Crash when adding non-mesh object